Fixed overlapping, updated formatting on axis, added labels to feed geophysics

--- a/src/main/resources/ru/nucodelabs/gem/style.css
+++ b/src/main/resources/ru/nucodelabs/gem/style.css
@@ -2,6 +2,14 @@
     -fx-stroke: transparent;
 }
 
+#vesCurve #vesCurveAxisY .axis-label {
+    -fx-label-padding: -70 0 0 0;
+}
+
+#vesCurve #vesCurveAxisX .axis-label {
+    -fx-label-padding: 0 0 -25 0;
+}
+
 #vesCurve .default-color0.chart-line-symbol {
     -fx-background-color: green;
     -fx-background-radius: 50%;
